--- a/Classes and Interfaces/index.html
+++ b/Classes and Interfaces/index.html
@@ -6,7 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="style.css" />
     <title>Understanding TypeScript</title>
-    <script src="./dist/app.js" defer></script>
+    <script src="./dist/classes.js" defer></script>
+    <script src="./dist/interfaces.js" defer></script>
   </head>
   <body>
     <div>
